VI-434 Enable published field on paragraphs.

--- a/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
@@ -16,7 +16,7 @@ bundle: vih_course_slot
 mode: default
 content:
   field_vih_cs_classes:
-    weight: 8
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -25,14 +25,14 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_vih_cs_mandatory:
-    weight: 7
+    weight: 1
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_vih_cs_title:
-    weight: 6
+    weight: 0
     settings:
       size: 60
       placeholder: ''
@@ -40,16 +40,24 @@ content:
     type: string_textfield
     region: content
   field_vih_cs_travel:
-    weight: 9
+    weight: 3
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 5
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 4
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
