--- a/config/sync/core.entity_form_display.paragraph.vih_option.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option.default.yml
@@ -45,6 +45,13 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 5
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   translation:
     weight: 4
     region: content
@@ -52,5 +59,4 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
