--- a/config/sync/core.entity_form_display.paragraph.app_answer.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.app_answer.default.yml
@@ -15,7 +15,7 @@ bundle: app_answer
 mode: default
 content:
   field_answer:
-    weight: 6
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
@@ -31,7 +31,7 @@ content:
     type: string_textfield
     region: content
   field_question_reference:
-    weight: 7
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -39,7 +39,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  status:
+    type: boolean_checkbox
+    weight: 3
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
