--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -25,7 +25,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -77,7 +77,7 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 4
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -86,7 +86,7 @@ content:
     region: content
   field_vih_person_photo:
     type: entity_browser_entity_reference
-    weight: 7
+    weight: 5
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -106,11 +106,18 @@ content:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 7
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 6
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
-  translation: true
   uid: true
