--- a/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_option_group.default.yml
@@ -16,7 +16,7 @@ mode: default
 content:
   field_vih_og_options:
     type: entity_reference_paragraphs
-    weight: 7
+    weight: 1
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -27,17 +27,25 @@ content:
     third_party_settings: {  }
     region: content
   field_vih_og_title:
-    weight: 6
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
-  translation:
-    weight: 10
+  status:
+    type: boolean_checkbox
+    weight: 3
     region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
+  translation:
+    weight: 2
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   created: true
-  status: true
   uid: true
