VI-447 Search results mix danish and english

--- a/config/sync/views.view.vih_search.yml
+++ b/config/sync/views.view.vih_search.yml
@@ -220,29 +220,9 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-              page_creator: '0'
-              layout_manager: '0'
-              page_reviewer: '0'
               media_creator: '0'
               media_manager: '0'
-              landing_page_creator: '0'
-              landing_page_reviewer: '0'
-              news_creator: '0'
-              news_reviewer: '0'
-              vih_long_cource_creator: '0'
-              vih_long_cource_reviewer: '0'
-              vih_course_period_creator: '0'
-              vih_course_period_reviewer: '0'
-              vih_long_course_order_creator: '0'
-              vih_long_course_order_reviewer: '0'
-              vih_short_course_creator: '0'
-              vih_short_course_reviewer: '0'
-              vih_short_course_order_creator: '0'
-              short_course_order_creator: '0'
-              vih_short_course_order_reviewer: '0'
-              short_course_order_reviewer: '0'
-              event_creator: '0'
-              event_reviewer: '0'
+              moderator: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -260,6 +240,44 @@ display:
           fields:
             rendered_item: rendered_item
           plugin_id: search_api_fulltext
+        search_api_language:
+          id: search_api_language
+          table: search_api_index_vih_search_index
+          field: search_api_language
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            '***LANGUAGE_language_interface***': '***LANGUAGE_language_interface***'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: search_api_language
       sorts: {  }
       title: Søg
       header:
