--- a/config/sync/views.view.vih_my_classes_nodes.yml
+++ b/config/sync/views.view.vih_my_classes_nodes.yml
@@ -637,6 +637,44 @@ display:
           entity_type: user
           entity_field: langcode
           plugin_id: language
+        status_1:
+          id: status_1
+          table: paragraphs_item_field_data
+          field: status
+          relationship: field_vih_paragraphs
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: paragraph
+          entity_field: status
+          plugin_id: boolean
       sorts:
         created:
           id: created
