--- a/config/sync/taxonomy.vocabulary.questions.yml
+++ b/config/sync/taxonomy.vocabulary.questions.yml
@@ -2,7 +2,7 @@ uuid: da0cbb3b-70b8-48e9-912b-e136e7571bc5
 langcode: und
 status: true
 dependencies: {  }
-name: Sprøgsmåler
+name: Spørgsmåler
 vid: questions
 description: ''
 hierarchy: 0
