--- a/config/sync/core.entity_form_display.paragraph.parent.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.parent.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.paragraph.parent.field_parent_address
     - field.field.paragraph.parent.field_parent_city
+    - field.field.paragraph.parent.field_parent_country
     - field.field.paragraph.parent.field_parent_email
     - field.field.paragraph.parent.field_parent_first_name
     - field.field.paragraph.parent.field_parent_last_name
@@ -30,6 +31,14 @@ content:
     region: content
   field_parent_city:
     weight: 5
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_parent_country:
+    weight: 10
     settings:
       size: 60
       placeholder: ''
