--- a/composer.json
+++ b/composer.json
@@ -64,7 +64,8 @@
         "drupal/honeypot": "^1.27",
         "drupal/mailsystem": "^4.1",
         "drupal/smtp": "1.0-beta3",
-        "drupal/better_exposed_filters": "^3.0@alpha"
+        "drupal/better_exposed_filters": "^3.0@alpha",
+        "drupal/pathologic": "^1.0@alpha"
     },
     "repositories": [
         {
