--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal/bootstrap": "3.11",
         "drupal/paragraphs": "1.x-dev",
-        "drupal/linkit": "^4.3",
+        "drupal/linkit": "5.0-beta7",
         "acquia/lightning": "~2.2.6",
         "drupal/admin_toolbar": "^1.20",
         "drupal/twig_tweak": "2.x-dev",
@@ -65,7 +65,9 @@
         "drupal/mailsystem": "^4.1",
         "drupal/smtp": "1.0-beta3",
         "drupal/better_exposed_filters": "^3.0@alpha",
-        "drupal/pathologic": "^1.0@alpha"
+        "drupal/pathologic": "^1.0@alpha",
+        "drupal/editor_advanced_link": "^1.4",
+        "drupal/devel": "^1.2"
     },
     "repositories": [
         {
