--- a/config/sync/editor.editor.rich_text.yml
+++ b/config/sync/editor.editor.rich_text.yml
@@ -30,7 +30,6 @@ settings:
           items:
             - DrupalLink
             - DrupalUnlink
-            - Linkit
         -
           name: Lists
           items:
@@ -54,12 +53,13 @@ settings:
             - ShowBlocks
             - Source
   plugins:
+    drupallink:
+      linkit_enabled: true
+      linkit_profile: internal
     language:
       language_list: un
     stylescombo:
       styles: ''
-    linkit:
-      linkit_profile: internal
     video_embed:
       defaults:
         children:
