VI-450 paragraph content grid, making references non translatable

--- a/config/sync/field.field.paragraph.vih_content_grid.field_vih_cg_node_ref.yml
+++ b/config/sync/field.field.paragraph.vih_content_grid.field_vih_cg_node_ref.yml
@@ -13,7 +13,7 @@ bundle: vih_content_grid
 label: Reference
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
