VI-436 Pictures should not be translated.

--- a/config/sync/field.field.block_content.banner.field_vih_banner_slides.yml
+++ b/config/sync/field.field.block_content.banner.field_vih_banner_slides.yml
@@ -15,7 +15,7 @@ bundle: banner
 label: 'Banner slides'
 description: 'Der skal tilføjes minimum 2 slides da banneret ellers vil blinke uhensigtsmæssigt.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
