--- a/config/sync/field.field.node.vih_long_cource.field_vih_top_banner.yml
+++ b/config/sync/field.field.node.vih_long_cource.field_vih_top_banner.yml
@@ -13,7 +13,7 @@ bundle: vih_long_cource
 label: 'Top Banner'
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
