--- a/config/sync/field.field.paragraph.vih_contact_person.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_contact_person.field_vih_background_color.yml
@@ -14,7 +14,7 @@ bundle: vih_contact_person
 label: Baggrundsfarve
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value:
   -
     value: white
