--- a/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_heading.yml
+++ b/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_heading.yml
@@ -12,7 +12,7 @@ bundle: vih_list_of_news_list_advanced
 label: Overskrift
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings: {  }
