--- a/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_link.yml
@@ -14,7 +14,7 @@ bundle: vih_list_of_news_list_advanced
 label: Link
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
