--- a/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_tags.yml
+++ b/config/sync/field.field.paragraph.vih_list_of_news_list_advanced.field_vih_tags.yml
@@ -13,7 +13,7 @@ bundle: vih_list_of_news_list_advanced
 label: Tags
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
