--- a/config/sync/field.field.paragraph.vih_wrapper.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_wrapper.field_vih_background_color.yml
@@ -14,7 +14,7 @@ bundle: vih_wrapper
 label: Baggrundsfarve
 description: ''
 required: true
-translatable: true
+translatable: false
 default_value:
   -
     value: white
