--- a/config/sync/field.field.paragraph.vih_wrapper.field_vih_background_img.yml
+++ b/config/sync/field.field.paragraph.vih_wrapper.field_vih_background_img.yml
@@ -13,7 +13,7 @@ bundle: vih_wrapper
 label: Baggrundsbillede
 description: ''
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
