--- a/config/sync/language.content_settings.taxonomy_term.valuation_labels.yml
+++ b/config/sync/language.content_settings.taxonomy_term.valuation_labels.yml
@@ -4,6 +4,11 @@ status: true
 dependencies:
   config:
     - taxonomy.vocabulary.valuation_labels
+  module:
+    - content_translation
+third_party_settings:
+  content_translation:
+    enabled: false
 id: taxonomy_term.valuation_labels
 target_entity_type_id: taxonomy_term
 target_bundle: valuation_labels
