VI-451 Modals not shown all content on courses.

--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_teaser_modal.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.vih_teaser_modal.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.taxonomy_term.vih_teaser_modal
     - field.field.taxonomy_term.vih_class.field_metatag
+    - field.field.taxonomy_term.vih_class.field_questions
     - field.field.taxonomy_term.vih_class.field_short_description
     - field.field.taxonomy_term.vih_class.field_vih_class_class_packages
     - field.field.taxonomy_term.vih_class.field_vih_class_color
@@ -14,8 +15,10 @@ dependencies:
     - field.field.taxonomy_term.vih_class.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class.field_vih_subheading
     - field.field.taxonomy_term.vih_class.field_vih_top_banner
+    - field.field.taxonomy_term.vih_class.field_vih_top_banner_text
     - taxonomy.vocabulary.vih_class
   module:
+    - entity_reference_revisions
     - panelizer
     - text
 third_party_settings:
@@ -46,7 +49,7 @@ content:
       link: false
     third_party_settings: {  }
   field_vih_class_price_addition:
-    weight: 2
+    weight: 3
     label: hidden
     settings:
       thousand_separator: ''
@@ -56,13 +59,23 @@ content:
     third_party_settings: {  }
     type: number_decimal
     region: content
+  field_vih_paragraphs:
+    type: entity_reference_revisions_entity_view
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
 hidden:
   field_metatag: true
+  field_questions: true
   field_short_description: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_class_material_price: true
-  field_vih_paragraphs: true
   field_vih_subheading: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
