--- a/config/sync/context.context.context_center_content.yml
+++ b/config/sync/context.context.context_center_content.yml
@@ -13,7 +13,7 @@ disabled: false
 conditions:
   request_path:
     id: request_path
-    pages: "/user/login\r\n/user/password"
+    pages: "/user/login\r\n/user/password\r\n/media/*"
     negate: 0
     uuid: 5684391f-79e7-4c50-bfbb-6c1971dd5778
     context_mapping: {  }
