--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,6 +11,9 @@ module:
   ckeditor: 0
   coffee: 0
   config: 0
+  config_filter: 0
+  config_ignore: 0
+  config_split: 0
   config_translation: 0
   consumers: 0
   contact: 0
