--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,9 @@
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/pathologic": "^1.0@alpha",
         "drupal/editor_advanced_link": "^1.4",
-        "drupal/devel": "^1.2"
+        "drupal/devel": "^1.2",
+        "drupal/config_split": "^1.3",
+        "drupal/config_ignore": "^2.1"
     },
     "repositories": [
         {
