VIES customer changes from db

--- a/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.vih_class.default.yml
@@ -20,6 +20,7 @@ dependencies:
   module:
     - entity_browser
     - field_group
+    - inline_entity_form
     - metatag
     - paragraphs
     - path
@@ -128,11 +129,15 @@ content:
   field_questions:
     weight: 22
     settings:
+      form_mode: default
+      label_singular: ''
+      label_plural: ''
+      allow_new: true
+      allow_existing: true
       match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      override_labels: false
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: inline_entity_form_complex
     region: content
   field_short_description:
     weight: 6
