--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -80,6 +80,7 @@ content:
       link: false
     third_party_settings: {  }
 hidden:
+  field_metatag: true
   field_vih_top_banner: true
   field_vih_top_banner_text: true
   field_vih_user_birthday: true
@@ -89,3 +90,4 @@ hidden:
   field_vih_user_type_id: true
   langcode: true
   member_for: true
+  vih_user_status: true
