--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class.radio_selection.yml
@@ -69,9 +69,11 @@ content:
 hidden:
   description: true
   field_metatag: true
+  field_questions: true
   field_vih_class_class_packages: true
   field_vih_class_color: true
   field_vih_paragraphs: true
   field_vih_subheading: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
