--- a/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
+++ b/docroot/modules/custom/vih_subscription/vih_subscription.routing.yml
@@ -132,3 +132,14 @@ vih_subscription.vih_cs_classes_modal:
     _title: 'System'
   requirements:
     _permission: 'access administration pages'
+vih_subscription.vih_node_modal:
+  path: '/vih_node_modal/{node}'
+  options:
+    parameters:
+      node:
+        type: entity:node
+  defaults:
+    _controller: '\Drupal\vih_subscription\Controller\SubscriptionModalController::vih_node_modal'
+    _title: 'System'
+  requirements:
+    _permission: 'access administration pages'
