--- a/config/sync/field.field.paragraph.user_quote.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.user_quote.field_vih_background_color.yml
@@ -12,10 +12,12 @@ field_name: field_vih_background_color
 entity_type: paragraph
 bundle: user_quote
 label: Baggrundsfarve
-description: ''
+description: "Vælg hvilken baggrundsfarve denne sektion skal have.<br>\r\n<span class=\"primary\">Primær</span>\r\n<span class=\"secondary\">Sekundær</span>"
 required: false
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: white
 default_value_callback: ''
 settings: {  }
 field_type: list_string
