--- a/config/sync/field.field.paragraph.vih_contact_person.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_contact_person.field_vih_background_color.yml
@@ -12,7 +12,7 @@ field_name: field_vih_background_color
 entity_type: paragraph
 bundle: vih_contact_person
 label: Baggrundsfarve
-description: ''
+description: "Vælg hvilken baggrundsfarve denne sektion skal have.<br>\r\n<span class=\"primary\">Primær</span>\r\n<span class=\"secondary\">Sekundær</span>"
 required: false
 translatable: false
 default_value:
