--- a/config/sync/field.field.paragraph.vih_content_grid.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.vih_content_grid.field_vih_background_color.yml
@@ -12,7 +12,7 @@ field_name: field_vih_background_color
 entity_type: paragraph
 bundle: vih_content_grid
 label: Baggrundsfarve
-description: 'Vælg hvilken baggrundsfarve denne sektion skal have.'
+description: "Vælg hvilken baggrundsfarve denne sektion skal have.<br>\r\n<span class=\"primary\">Primær</span>\r\n<span class=\"secondary\">Sekundær</span>"
 required: true
 translatable: false
 default_value:
