--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/pathologic": "^1.0@alpha",
         "drupal/editor_advanced_link": "^1.4",
-        "drupal/devel": "^1.2"
+        "drupal/devel": "^1.2",
+        "drupal/redirect": "^1.2"
     },
     "repositories": [
         {
