--- a/config/sync/field.field.paragraph.1_column_action_centered.field_vih_background_color.yml
+++ b/config/sync/field.field.paragraph.1_column_action_centered.field_vih_background_color.yml
@@ -12,7 +12,7 @@ field_name: field_vih_background_color
 entity_type: paragraph
 bundle: 1_column_action_centered
 label: Baggrundsfarve
-description: "Vælg hvilken baggrundsfarve denne sektion skal have.<br>\r\n<span class=\"primary\">Primær</span>\r\n<span class=\"secondary\">Sekundær</span>\r\n<span class=\light-gray\">Lys grå</span>\r\n<span class=\"secondary\">Grå</span>\r\n<span class=\"white\">Hvid</span>"
+description: "Vælg hvilken baggrundsfarve denne sektion skal have.<br>\r\n<span class=\"primary\">Primær</span>\r\n<span class=\"secondary\">Sekundær</span>\r\n<span class=\light-gray\">Lys grå</span>\r\n<span class=\"gray\">Grå</span>\r\n<span class=\"white\">Hvid</span>"
 required: false
 translatable: false
 default_value:
