--- a/config/sync/views.view.vih_banner_slideshow.yml
+++ b/config/sync/views.view.vih_banner_slideshow.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.storage.block_content.field_vih_banner_slides
   module:
     - block_content
+    - datetime
     - entity_reference_revisions
     - owlcarousel
 id: vih_banner_slideshow
@@ -164,6 +165,7 @@ display:
           entity_type: block_content
           entity_field: type
           plugin_id: bundle
+          group: 1
         langcode:
           id: langcode
           table: block_content_field_data
@@ -204,6 +206,86 @@ display:
           entity_type: block_content
           entity_field: langcode
           plugin_id: language
+        field_vih_block_expire_date_value:
+          id: field_vih_block_expire_date_value
+          table: block_content__field_vih_block_expire_date
+          field: field_vih_block_expire_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: empty
+          value:
+            min: ''
+            max: ''
+            value: ''
+            type: date
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
+        field_vih_block_expire_date_value_1:
+          id: field_vih_block_expire_date_value_1
+          table: block_content__field_vih_block_expire_date
+          field: field_vih_block_expire_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '>'
+          value:
+            min: ''
+            max: ''
+            value: now
+            type: offset
+          group: 2
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: datetime
       sorts: {  }
       title: 'Banner slideshow'
       header: {  }
@@ -212,6 +294,11 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+          2: OR
     cache_metadata:
       max-age: -1
       contexts:
