--- a/composer.json
+++ b/composer.json
@@ -70,7 +70,8 @@
         "drupal/devel": "^1.2",
         "drupal/config_split": "^1.3",
         "drupal/config_ignore": "^2.1",
-        "drupal/redirect": "^1.2"
+        "drupal/redirect": "^1.2",
+        "drupal/google_tag": "^1.0"
     },
     "repositories": [
         {
