--- a/config/vih/views.view.vih_events.yml
+++ b/config/vih/views.view.vih_events.yml
@@ -470,21 +470,19 @@ display:
           entity_field: langcode
           plugin_id: language
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_vih_event_start_date_value:
+          id: field_vih_event_start_date_value
+          table: node__field_vih_event_start_date
+          field: field_vih_event_start_date_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
-          granularity: second
+          granularity: minute
+          plugin_id: datetime
       header: {  }
       footer: {  }
       empty: {  }
