VI-486 Banner text is translatable.

--- a/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_top_banner_text.yml
+++ b/config/sync/field.field.taxonomy_term.vih_class_package.field_vih_top_banner_text.yml
@@ -12,7 +12,7 @@ bundle: vih_class_package
 label: 'Tekst på banner'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
