--- a/config/vih/field.field.node.event.field_vih_top_banner_text.yml
+++ b/config/vih/field.field.node.event.field_vih_top_banner_text.yml
@@ -12,7 +12,7 @@ bundle: event
 label: 'Tekst på banner'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
